[package]
name = "rust-counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = { version = "0.11.0", features = ["utils"] }
yew = { version = "0.21.0", features = ["csr"] }
yewdux = "0.9.4"

[dependencies.web-sys]
version = "0.3"
features = ["Document", "DomTokenList", "Element", "Node", "Window"]
